--- a/html/sselection/index.html
+++ b/html/sselection/index.html
@@ -523,7 +523,7 @@
       });
     </script>
     <p>The canonical answer in biology class is “genetic diversity”, but this isn’t such an obvious win. Here are some of the disadvantages.</p>
-    <div style="padding-left: 1em;padding-right: 1em">
+    <div style="padding-left: 1em; padding-right: 1em;">
       <ol>
         <li>Imagine I have a sexual population equal parts male and female. If every female gives birth to two children, then the population size won’t change. In an asexual population, every individual can reproduce, and so the population size could’ve doubled. Hence, sexual populations need to work much harder to maintain growth.</li>
         <li>Suppose I’ve evolved a really good set of genes. In an asexual population, my set of genes would get propogated, virtually unchanged, to the next generation. In a sexual population, half the genes would get thrown out and replaced with my mate’s dna. In this case, sexual selection actually made my descendents do worse!</li>
@@ -531,7 +531,7 @@
       </ol>
     </div>
     <p>So then why is sexual reproduction so common?</p>
-    <div style="padding-left: 1em;padding-right: 1em">
+    <div style="padding-left: 1em; padding-right: 1em;">
       <ol>
         <li>In most environments, pathogens and parasites create a constantly changing environment. Hence, reusing good genes from the previous generation is not enough to guarantee success, as those genes might not be good anymore.</li>
         <li>
