--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -531,11 +531,11 @@
         </ol>
       </div>
     </div>
-    <p>Another way to think about it is <strong>Values</strong> are your axioms, and <strong>Rationalism</strong> is constraint propogation. I find this distinction interesting because it leaves open some interesting puzzles.</p>
+    <p>Another way to think about it is <strong>Values</strong> are your axioms, and <strong>Rationalism</strong> is constraint propogation. Hence, you cannot rationally derive all your values… which begs the following questions.</p>
     <ol>
       <li>How do you choose good values?</li>
       <li>Where should values come from?</li>
-      <li>How do / should you update your values?</li>
+      <li>How should you update your values?</li>
     </ol>
   </body>
 </html>
