glightly Nicer Template

--- a/html/neuro/index.html
+++ b/html/neuro/index.html
@@ -540,11 +540,21 @@
     </div>
     <p>The heart of memory research is to precisely state the storage and retrieval mechanism. The storage mechanism is called an engram, and it usually involves some kind of long-term change to the neurons (like Long Term Potentiation).</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.0.1<span style="white-space: pre-wrap">&#x20;&#x20;</span>(Engram)</strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
+        <div style="column-count: 2; column-gap: 2em;">
+          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Engram</strong></div>
+          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.0.1</strong></div>
+        </div>
+      </div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">The enduring change in the brain that an experience produces.</div>
     </div>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.0.2<span style="white-space: pre-wrap">&#x20;&#x20;</span>(Long Term Potentiation)</strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
+        <div style="column-count: 2; column-gap: 2em;">
+          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Long Term Potentiation</strong></div>
+          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.0.2</strong></div>
+        </div>
+      </div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">A persistent strengthening of synapses based on recent patterns of activity.</div>
     </div>
     <p>What we’ve learned is that <strong>Engrams</strong> are typically a sparse subset of neurons. Investigation in CA3 pyramidal neurons shows that these while these neurons are initially typical, they rapidly become more excitable over the course of a day past when the memory was made. More precisely, there’s a lot more eletrical inputs that trigger action potentials, and a lot more prolonged spiking activity. Interestingly, there’s also a lot more inhibitory inputs. This kind of makes sense, for the engram to be useful we need it activate if and only if a reasonable context arises. I’m not sure why this can’t be achieved with just excitatory inputs, but perhaps those cannot create a precise enough context by themselves.</p>
