--- a/html/note/index.html
+++ b/html/note/index.html
@@ -545,7 +545,7 @@
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At etiam Athenis, ut e patre audiebam facete et urbane Stoicos irridente, statua est in quo a nobis philosophia defensa et.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.0.1<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.0.1</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At.</p>
@@ -555,7 +555,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.1.2<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.1.2</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At.</p>
@@ -564,12 +564,12 @@
     </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Theorem 1.1.1<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Theorem 1.1.1</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #fef2f4; border-radius:4pt; border-color: #ee6983; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 1.1.1<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 1.1.1</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #f7fbfc; border-radius:4pt; border-color: #769fcd; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat.</p>
         <p class="block-equation">
@@ -580,24 +580,29 @@
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Theorem 1.1.2<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Theorem 1.1.2</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #fef2f4; border-radius:4pt; border-color: #ee6983; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri.</div>
     </div>
     <div id="loc-3" style>
       <h3>1.2. The concept of measurability</h3>
     </div>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Definition 1.2.3<span style="white-space: pre-wrap">&#x20;&#x20;</span>(CLT)</strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
+        <div style="column-count: 2; column-gap: 2em;">
+          <div style="text-align: left;vertical-align: text-top" class="align"><strong>CLT</strong></div>
+          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.2.3</strong></div>
+        </div>
+      </div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At etiam Athenis, ut e patre audiebam facete et urbane Stoicos irridente, statua est in quo a nobis philosophia defensa et.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 1.2.2<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 1.2.2</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #f7fbfc; border-radius:4pt; border-color: #769fcd; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut.</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Lemma <span id="loc-4">1.2.1</span><span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Lemma <span id="loc-4">1.2.1</span></strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #fff4e0; border-radius:4pt; border-color: #f4b183; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere.</div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere.</p>
@@ -605,7 +610,7 @@
       <h2>2. Positive Borel Measures</h2>
     </div>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Lemma 2.0.1<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Lemma 2.0.1</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #fff4e0; border-radius:4pt; border-color: #f4b183; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At etiam Athenis, ut e patre audiebam facete et urbane Stoicos.</p>
         <p class="block-equation">
@@ -619,7 +624,7 @@
     </div>
     <p>This is an example where you can easily reference and jump to a block of a definition, theorem, or picture under this template. From <a href="#loc-4"><strong>Lemma 1.2.1</strong></a>, we can get</p>
     <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 2.1.1<span style="white-space: pre-wrap">&#x20;</span></strong></div>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;"><strong>Corollary 2.1.1</strong></div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #f7fbfc; border-radius:4pt; border-color: #769fcd; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere.</div>
     </div>
     <p><strong><span style="font-variant-caps: small-caps">Proof: </span></strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem, ut postea variari voluptas distinguique possit, augeri amplificarique non possit. At etiam Athenis, ut e patre audiebam facete et urbane Stoicos.</p>
