Better Rationality Post

--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>rationality</title>
+    <title>Rationality</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
@@ -522,20 +522,43 @@
         subtree: true,
       });
     </script>
-    <div style>
+    <div id="Rationalism" style>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
+        <div style="column-count: 2; column-gap: 2em;">
+          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Rationalism</strong></div>
+        </div>
+      </div>
+      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">A reasoning framework for estimating the truth. It cannot answer questions about what a “good” decision or “bad” decision by itself. For that you need a set of values.</div>
+    </div>
+    <div id="Values" style>
+      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
+        <div style="column-count: 2; column-gap: 2em;">
+          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Values</strong></div>
+        </div>
+      </div>
       <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
-        <p><strong>Rationalism</strong>: A reasoning framework for estimating the truth. It cannot answer questions about what a “good” decision or “bad” decision by itself. For that you need a set of values.<br><strong>Values</strong>: Your <em>objective function</em>. As far as I can tell, there isn’t just one valid set of values. However, there are some desirable properties any set of values should have.</p>
+        <p>Your <em>objective function</em>. There is no “true” objective function, no formula derived from the laws of physics that tells us how to compute the utility of a human life, so that we can maximize it in aggregate. Nonetheless, there are still some properties your set of values should strive for.</p>
         <ol>
-          <li>Self-consistency (no internal contradictions).</li>
-          <li>The ability to compare any two decisions.</li>
+          <li>Self-Consistency: No subset of values can be used to deduce another value is false.</li>
+          <li>Transitivity: A > B and B > C implies A > C.</li>
+          <li>Comparability: Any two decisions can be scored.</li>
         </ol>
       </div>
     </div>
-    <p>Another way to think about it is <strong>Values</strong> are your axioms, and <strong>Rationalism</strong> is constraint propogation. Hence, you cannot rationally derive all your values… which begs the following questions.</p>
+    <p>Another way to think about it is <a href="#Values">Values</a> are your axioms, and <a href="#Rationalism">Rationalism</a> is constraint propogation.</p>
+    <p>I find this distinction important because the two concepts can be easily mixed up, and seperating them allows answering a few questions.</p>
+    <h3>Is it ever possible for two rational people to “agree to disagree”?</h3>
+    <p>The thinking here is that two rationalists should not be able to hold opposing viewpoints on the same issue given the same evidence. However, that’s not true. The two rationalists could simply have different <a href="#Values">Values</a>, and therefore the “rational” choice for both of them need not be the same. The key point is rationality is not by itself a value system. It can’t be used to prove your value axioms are true.</p>
+    <h3>Is “being positive” irrational?</h3>
+    <p>I’ve always found this advice kind of troubling because it seems to imply you should lie to yourself about how good things are. However, that’s not necessarily the case. Imagine you thought you had slim odds of doing ground-breaking research, and that made you pretty sad. Consider the following two approaches to positivity.</p>
     <ol>
-      <li>How do you choose good values?</li>
-      <li>Where should values come from?</li>
-      <li>How should you update your values?</li>
+      <li>I tell myself that instead of slim odds of doing great research, I have massive odds!</li>
+      <li>I tell myself, isn’t it great that I’m in a position where I can spend my time investigating the things that interest me most? Maybe I won’t change the world, but I’ll push the field forward while pursuing my passion.</li>
     </ol>
+    <p>Approach 1 manipulated the truth. Approach 2 updated our <a href="#Values">Values</a>. Both approaches led to to a better assessment of how things are, but Approach 2 didn’t require lying to ourselves.</p>
+    <p>So “being positive” doesn’t require being irrational. That’s great, because Approach 1 is not stable. If the truth scares you enough that you need to lie to yourself to proceed, then you should seriously consider whether its worth it to proceed. In the example, imagine the researcher was really only interested in producing ground-breaking work with high odds. If that really wasn’t possible to the best of anyone’s knowledge, he’s probably better off quiting. Maybe he’d get lucky and publish a breakthrough if he persisted, but most likely he wouldn’t and would spend his career feeling dissapointed.</p>
+    <h3>Can a Rational person be an optimist?</h3>
+    <p>This seems almost like a contradiction at first glance. The truth doesn’t care what makes you happy. The truth just <em>is</em>. So then, is it really possible to be rational and consistently feel happy, or does this require some kind of self-deception?</p>
+    <p>It doesn’t require self-deception. This is because what is “good” and “positive” is an inherently value-based thing. The truth might not care what makes you happy, but you get to decide what makes you happy, as least to some extent. You can choose to derive happiness from all that you have, or to derive sadness from all that you lack. Neither is “irrational”, they are both two different weightings of the same situation. Hence, the optimist need not be irrational.</p>
   </body>
 </html>
