--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -560,5 +560,7 @@
     <h3>Can a Rational person be an optimist?</h3>
     <p>This seems almost like a contradiction at first glance. The truth doesn’t care what makes you happy. The truth just <em>is</em>. So then, is it really possible to be rational and consistently feel happy, or does this require some kind of self-deception?</p>
     <p>It doesn’t require self-deception. This is because what is “good” and “positive” is an inherently value-based thing. The truth might not care what makes you happy, but you get to decide what makes you happy, as least to some extent. You can choose to derive happiness from all that you have, or to derive sadness from all that you lack. Neither is “irrational”, they are both two different weightings of the same situation. Hence, the optimist need not be irrational.</p>
+    <h3>Can you make a Church of Rationality?</h3>
+    <p>I was thinking about this when talking to a friend. I mentioned that I found it kind of unfortunate that while there were many communities dedicated to following a religion, there wasn’t anything for secular people. There’s no major church of rationality, humanism, or atheism despite the large number of secular people world-wide. Why not? There’s probably a dozen reasons, but the one that stands out to me is that a religion gives its people a shared set of values. It rejects my claim that there is no true objective function by giving its people a specialized set of rules and duties. The secular followings I mentioned make no such attempt.</p>
   </body>
 </html>
