--- a/html/agency/index.html
+++ b/html/agency/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>some definitions</title>
+    <title>Agency</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
