--- a/html/ai-is-a-step-change/index.html
+++ b/html/ai-is-a-step-change/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AI is a step change</title>
+    <title>AI Is A Step Change</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
