--- a/html/cmu-db1/index.html
+++ b/html/cmu-db1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cmu-db1</title>
+    <title>CMU Databases</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
