--- a/html/ggs1/index.html
+++ b/html/ggs1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GGS1</title>
+    <title>Guns Germs and Steel</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
