--- a/html/sselection/index.html
+++ b/html/sselection/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sexual Selection, what's the point?</title>
+    <title>Sexual Selection, What's The Point?</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
