--- a/html/thinking1/index.html
+++ b/html/thinking1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>random thoughts on work</title>
+    <title>Random Thoughts On Work</title>
     <meta name="authors" content="Cyril Sharma">
   </head>
   <body>
