--- a/html/neuro/index.html
+++ b/html/neuro/index.html
@@ -532,7 +532,8 @@
             <li><a href="#loc-3"><span class="prefix">1.2.</span> Engram Retrieval</a></li>
           </ol>
         </li>
-        <li><a href="#loc-4"><span class="prefix">2.</span> Sources</a></li>
+        <li><a href="#loc-4"><span class="prefix">2.</span> Todo</a></li>
+        <li><a href="#loc-5"><span class="prefix">3.</span> Sources</a></li>
       </ol>
     </nav>
     <div id="loc-1" style>
@@ -592,11 +593,19 @@
     <p>Initially, you have a bunch of nodes that are weakly connected to each other, but over time you end up with a smaller number of tighly connected nodes. This implies your brain is constantly culling and refining your memories. This servers a purpose, the smaller your engrams, the more of them you can hold and the tighter the set of inputs they respond to can be. Sparsity has another advantage, which is that barely any of your brain has to be activated to retrieve a memory. If your entire brain had to turn on retrieve stuff, it wouldn’t be efficient at all.</p>
     <p>This makes me think the brain is similar to some kind of <a href="https://en.wikipedia.org/wiki/Hierarchical_navigable_small_world">HNSW</a> scheme, or like an MOE model with a bunch of gates that lead you down to an enormous number of experts, each with potentially a lot of shared parameters.</p>
     <div id="loc-4" style>
-      <h2>2. Sources</h2>
+      <h2>2. Todo</h2>
+    </div>
+    <ol>
+      <li>The brain has so much memory capacity (estimated 2.5PB) what on Earth is it using it all for? Furthermore, Is the number of synapse states (which is where the estimate comes from) close to the memory capacity, or are synapses weights far more constrained?</li>
+      <li>Write up some stuff insights from Memory Augmented Transformers: super-short term memory (sensory buffer), short-term memory (neuron loops), long-term memory (synapses)…</li>
+    </ol>
+    <div id="loc-5" style>
+      <h2>3. Sources</h2>
     </div>
     <ol>
       <li><a href="https://arxiv.org/pdf/2506.01659">Engram Memory Encoding</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Hodgkin%E2%80%93Huxley_model">Hodgkin-Huxley Model</a></li>
+      <li><a href="https://arxiv.org/pdf/2508.10824">Memory-Augmented Transformers</a></li>
     </ol>
   </body>
 </html>
