AI The Good Ending

--- a/html/ai---the-good-ending/index.html
+++ b/html/ai---the-good-ending/index.html
@@ -526,6 +526,8 @@
     <p>Within a few weeks, Brain.ai’s workforce shrunk rapidly. The researchers left of their own accord. In their words, a human mind was merely a penny compared to the intellectual capital possesed by B4. The rate of ground-breaking results out of Brain.ai continued to increase.</p>
     <p>A few years later, and the world had transformed. B4 had solved humanoid robotics. It had conquered cancer. People had stopped aging past their primes. Work didn’t exist anymore, all necessary intellectual and manual labor had been automated.</p>
     <hr>
-    <p>This is the good ending, where we unlock the secrets of AI and use it to solve all our problems. I’ve often found myself filled with a bit of dread at this supposed utopia. All my life, I’ve thought that hedonism (pleasure for pleasure’s sake) is a shallow way of living. That one should strive to make the world a better place. But in this utopia, humans lives are free of strife, and can’t really do much more then hedonism. I wonder how people will find meaning in such a life?</p>
+    <p>This is the good ending, where we unlock the secrets of AI and use it to solve all our problems.</p>
+    <p>I’ve often found myself filled with a bit of dread at this supposed utopia. All my life, I’ve thought that hedonism (pleasure for pleasure’s sake) is a shallow way of living. That one should work hard and should strive to make the world a better place. But in this utopia, there’s no strife. There’s no need for people to work hard, hedonism is practically the only style of life you <em>can</em> live.</p>
+    <p>In the same way that modern society no longer values the ability to hunt or gather berries, I can’t imagine future societies will value hard work, discipline, or curiosity. Perhaps we’ll all get used to it, but I can’t help but feel that humanity will have lost something important.</p>
   </body>
 </html>
