Remove Client Router

--- a/html/rationality/index.html
+++ b/html/rationality/index.html
@@ -547,7 +547,7 @@
     </div>
     <p>Another way to think about it is <a href="#Values">Values</a> are your axioms, and <a href="#Rationalism">Rationalism</a> is constraint propogation.</p>
     <p>I find this distinction important because the two concepts can be easily mixed up, and seperating them allows answering a few questions.</p>
-    <h3>Is it ever possible for two rational people to “agree to disagree”?</h3>
+    <h3>Can two rational people “agree to disagree”?</h3>
     <p>The thinking here is that two rationalists should not be able to hold opposing viewpoints on the same issue given the same evidence. However, that’s not true. The two rationalists could simply have different <a href="#Values">Values</a>, and therefore the “rational” choice for both of them need not be the same. The key point is rationality is not by itself a value system. It can’t be used to prove your value axioms are true.</p>
     <h3>Is “being positive” irrational?</h3>
     <p>I’ve always found this advice kind of troubling because it seems to imply you should lie to yourself about how good things are. However, that’s not necessarily the case. Imagine you thought you had slim odds of doing ground-breaking research, and that made you pretty sad. Consider the following two approaches to positivity.</p>
